# OpenX-MCP

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  openx-architecture.drawio  pyproject.toml  refactor_bg.py  refactor_github.py  refactor_run_in_background.py  refactor_workspace.py  requirements.txt  run-openx-agent  run-openx-tui
app/: config.py  github_client.py  main.py  mcp.py
app/analysis/: ai_analysis.py  static_analysis.py
openx-agent/: agent.py  cache.py  command_router.py  config.py  format_tool_output.py  gh_cli.py  github_client.py  langchain_agent.py  llm.py  main.py  mcp.py  progress.py  rag.py  server.py  terminal.py  workspace.py
openx-agent/analysis/: ai_analysis.py  architecture.py  format_report.py  static_analysis.py
openx-agent/tools/: agent_tools.py  analysis.py  github.py  rag_tools.py  workspace_tools.py
openx-tui/: Cargo.toml
openx-tui/src/: actions.rs  app.rs  backend.rs  commands.rs  events.rs  git.rs  main.rs  state.rs
openx-tui/src/services/: mod.rs  util.rs
openx-tui/src/ui/: layout.rs  markdown.rs  mod.rs  renderer.rs  theme.rs
openx-tui/src/ui/widgets/: chat.rs  header.rs  input.rs  logs.rs  mod.rs  palette.rs  sidebar.rs  status.rs
