[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openx-mcp"
version = "0.1.0"
description = "OpenX MCP server and terminal interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "fastmcp>=2.0",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "PyGithub>=2.3",
  "python-dotenv>=1.0",
  "anthropic>=0.25",
  "langchain>=0.3",
  "langchain-huggingface>=0.1",
  "langchain-anthropic>=0.1",
  "langchain-community>=0.3",
  "faiss-cpu>=1.8",
  "langsmith>=0.2",
  "sentence-transformers>=3.0",
]

[project.scripts]
openx-cli = "openx_agent.command_router:main"

[tool.setuptools.package-dir]
openx_agent = "openx-agent"
"openx_agent.analysis" = "openx-agent/analysis"

[tool.setuptools]
packages = ["openx_agent", "openx_agent.analysis"]

[tool.setuptools.package-data]
openx_agent = ["*.tcss"]
