[package]
name = "openx-tui"
version = "0.1.0"
edition = "2021"
description = "OpenX MCP TUI client (Rust)"
license = "MIT"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
fuzzy-matcher = "0.3"
pulldown-cmark = "0.9"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
